# Atlas

./: .env.example  .gitignore  AGENTS.md  README.md  package-lock.json  package.json  pyproject.toml  tsconfig.json  vitest.config.ts
.claude/: settings.json  settings.local.json
.claude/agents/: llm-response-evaluator.md
ai/: index.ts
docs/: ASSISTANT_GRAPH.md  EXAMPLES.md  GRAPH.md
playground/: save-result.ts
playground/autocompleter/: README.md  index.ts
playground/basic/: README.md  index.ts
playground/instructions/: README.md  index.ts
playground/raw_llm/: basic.ts
playground/streaming/: EXAMPLES.md  stream.ts
playground/writer/: index.ts
playground/writer_graph/: continue.ts  with-instruction.ts
scripts/: copy-agent-prompts.mjs  run-ui-dev.ts  save-assistant-smoke-response.ts
settings/: README.md
src/: config.ts  definition.ts  graph.ts  history.ts  index.ts  main.py  messages.ts  prompt-loader.ts  run-assistant.ts  state.ts  types.ts
src/ai/: __init__.py  chat.py  chat.ts  client.py  client.ts
src/assistant/: definition.ts  graph.ts  history.ts  messages.ts  prompt-loader.ts  state.ts  types.ts
src/config/: __init__.py  env.py  env.ts
src/marker_writer/: cli.ts  graph.ts  helpers.test.ts  index.ts  state.ts  types.test.ts  types.ts
src/mcp/: index.ts  types.ts
src/nodes/: writer.ts
src/providers/: openai-compatible-model.ts
src/runtime/: workflow.ts
src/skills/: __init__.py  index.ts  registry.ts  types.ts
tests/: test-prompts.ts
ui/: README.md  package-lock.json  package.json  tsconfig.app.json
ui/src/: App.css  (+2 more)
(+83 files in other folders)
